fix(tag): remove opacity from tag styles for improved visibility

--- a/src/styles/presentation.scss
+++ b/src/styles/presentation.scss
@@ -923,7 +923,6 @@ ul {
   .tag {
     text-align: center;
     font-size: 0.6em;
-    opacity: 0.85;
     margin-block: 0 0.4em;
   }
   pre {
